routes/httpbin-child-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
spec:
  rules:
  - backendRefs:
    - name: httpbin
      port: 8000
