routes/httpbin-root-gw2-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-root
  namespace: gg-config-2
spec:
  parentRefs:
    - name: gw-2
  hostnames:
    - "httpbin"
  rules:
    - filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
            - name: Foo
              value: bar
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: route-option-2
      backendRefs:
      - name: '*'
        group: gateway.networking.k8s.io
        kind: HTTPRoute
        namespace: httpbin
