routes/httpbin-root-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-root
  namespace: gg-config
spec:
  parentRefs:
    - name: gw-1
  hostnames:
    - "httpbin"
  rules:
    - backendRefs:
      - name: '*'
        group: gateway.networking.k8s.io
        kind: HTTPRoute
        namespace: httpbin
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: Foo
                value: bar
